refactor: rebuild embedding service and update logic for asymmetric search